# simple_timer

./: CMakeLists.txt  main.cpp  readme.md
